-Se agrega entidad EstadoArchivoAsociado
- Codigo de pantalla (avance)

--- a/src/FacturaElectronica.Ui.Web/Site.Master
+++ b/src/FacturaElectronica.Ui.Web/Site.Master
@@ -45,8 +45,9 @@
                         <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home" />
                         <asp:MenuItem NavigateUrl="~/Pages/UsuariosListado.aspx" Text="Usuarios" />
                         <asp:MenuItem NavigateUrl="~/Pages/ClienteListado.aspx" Text="Clientes" />
-                        <asp:MenuItem NavigateUrl="~/Pages/ComprobantesListado.aspx" Text="Comprobantes" />                        
-                        <asp:MenuItem NavigateUrl="~/About.aspx" Text="Acerca de.." />
+                        <asp:MenuItem NavigateUrl="~/Pages/ComprobantesListado.aspx" Text="Mis Comprobantes" />
+                        <asp:MenuItem NavigateUrl="~/Pages/ReporteComprobantes.aspx" Text="Reporte Comprobantes" />
+                        <asp:MenuItem NavigateUrl="~/About.aspx" Text="Contacto" />
                     </Items>
                 </asp:Menu>
             </div>
