--- a/src/FacturaElectronica.Ui.Web/Site.Master
+++ b/src/FacturaElectronica.Ui.Web/Site.Master
@@ -7,6 +7,7 @@
 <head runat="server">
     <title></title>
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
+    <script src="/Scripts/AppCommon.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
 </head>
