--- a/src/FacturaElectronica.Ui.Web/Site.Master
+++ b/src/FacturaElectronica.Ui.Web/Site.Master
@@ -6,7 +6,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head runat="server">
     <title></title>
-    <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
+    <link href="/Styles/Site.css" rel="stylesheet" type="text/css" />
+    <link href="/Styles/GridStyle.css" rel="stylesheet" type="text/css" />
+    <link href="/Styles/jquery-ui-1.8.10.custom.css" rel="stylesheet" type="text/css" />
+    <script src="/Scripts/DirtyCheck.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery-1.4.4.min.js" type="text/javascript"></script>
+    <script src="/Scripts/ajaxupload.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery-ui-1.8.10.custom.min.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery.datepick.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery.datepick-es-AR.js" type="text/javascript"></script>
+    <link href="/Styles/jquery.datepick.css" rel="stylesheet" type="text/css" />
     <script src="/Scripts/AppCommon.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
@@ -30,27 +39,28 @@
                         ]
                     </AnonymousTemplate>
                     <LoggedInTemplate>
-                        Welcome <span class="bold">
-                            <asp:LoginName ID="HeadLoginName" runat="server" />
+                        Bienvenido <span class="bold">
+                            <asp:loginName ID="HeadLoginName" runat="server" />
                         </span>! [
                         <asp:LoginStatus ID="HeadLoginStatus" runat="server" LogoutAction="Redirect" LogoutText="Salir"
-                            LogoutPageUrl="~/" />
+                            LogoutPageUrl="~/" onloggedout="HeadLoginStatus_LoggedOut"  />
                         ]
                     </LoggedInTemplate>
                 </asp:LoginView>
+
             </div>
             <div class="clear hideSkiplink">
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" EnableViewState="false"
                     IncludeStyleBlock="false" Orientation="Horizontal">
                     <Items>
-                        <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home" />
+<%--                        <asp:MenuItem NavigateUrl="~/Default.aspx" Text="Home" />
                         <asp:MenuItem NavigateUrl="~/Pages/UsuariosListado.aspx" Text="Usuarios" />
                         <asp:MenuItem NavigateUrl="~/Account/ChangePassword.aspx" Text="Cambiar Contraseña" />
                         <asp:MenuItem NavigateUrl="~/Pages/ClienteListado.aspx" Text="Clientes" />
                         <asp:MenuItem NavigateUrl="~/Pages/ComprobantesListado.aspx" Text="Mis Comprobantes" />
                         <asp:MenuItem NavigateUrl="~/Pages/ReporteComprobantes.aspx" Text="Reporte Comprobantes" />
                         <asp:MenuItem NavigateUrl="~/Pages/Contacto.aspx" Text="Contacto" />
-                    </Items>
+--%>                    </Items>
                 </asp:Menu>
             </div>
         </div>
