--- a/src/FacturaElectronica.Ui.Web/Site.Master
+++ b/src/FacturaElectronica.Ui.Web/Site.Master
@@ -17,6 +17,7 @@
     <script src="/Scripts/jquery.datepick-es-AR.js" type="text/javascript"></script>
     <link href="/Styles/jquery.datepick.css" rel="stylesheet" type="text/css" />
     <script src="/Scripts/AppCommon.js" type="text/javascript"></script>
+    <script src="/Scripts/site.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
 </head>
