--- a/src/FacturaElectronica.Ui.Web/Styles/GridStyle.css
+++ b/src/FacturaElectronica.Ui.Web/Styles/GridStyle.css
@@ -7,6 +7,7 @@
     border-width: 1px 1px 3px;
     color: #666666;
     padding-left: 10px;
+    font-size: 12px;
 }
 
 .editionContainerFilter a
@@ -61,6 +62,7 @@
 
 .buttons
 {
+    font-size:12px;
     float: left;
     margin-top: 10px;
 }
@@ -78,6 +80,7 @@
 
 .editionContainerFilter .inputs
 {
+    font-size:12px;
 }
 
 .editionContainerFilter .multiline
@@ -89,12 +92,13 @@
 .editionContainerFilter .cbo
 {
     width: 151px;
+    font-size:12px;
 }
 
 .editionContainerFilter .chk
 {    
-}
 
+}
 
 .editionContainerFilter .lst
 {
@@ -105,6 +109,11 @@
 {
     height: 150px;
     width: 250px;
+}
+
+.editionContainerFilter .span
+{
+
 }
 
 .editionContainerFilter .buscarInline
